fixed button on mobile wasn't a block

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -226,7 +226,9 @@ figure * {
     margin: 0 auto;
     text-align: center;
 }
-
+.button{
+    display: block;
+}
 .source {
     font-style: italic;
     margin-top: -20px;
